Fix case study image width issue off screen

--- a/src/styles/2-modules/_case-study.scss
+++ b/src/styles/2-modules/_case-study.scss
@@ -44,6 +44,8 @@
   }
 
   .case-study-image {
+    width: 100%;
+    max-width: 1080px;
     border: 1px solid $lightgray;
     border-radius: 18px;
     background: $white;
